Added support for flipbook animations

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.lsp
+.clj-kondo
 /.internal
 /build
 .externalToolBuilders
@@ -8,10 +10,3 @@ Thumbs.db
 .project
 .cproject
 builtins
-/utils/rive-cpp/build
-/utils/rive-cpp/rive-cpp*
-/utils/rive-cpp/earcut*
-/utils/rive-cpp/libtess2*
-/utils/rive-cpp/*.zip
-/bundle*
-bob.jar
