--- a/game.project
+++ b/game.project
@@ -22,3 +22,6 @@ include_dirs = texturepacker
 [graphics]
 max_draw_calls = 1024
 max_debug_vertices = 50000
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
+
