--- a/.github/workflows/bob.yml
+++ b/.github/workflows/bob.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
-          java-version: '17.0.5+8'
+          java-version: '21.0.5+11.0.LTS'
           architecture: x64
           distribution: 'temurin'
 
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
-          java-version: '17.0.5+8'
+          java-version: '21.0.5+11.0.LTS'
           architecture: x64
           distribution: 'temurin'
 
@@ -109,7 +109,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v3
         with:
-          java-version: '17.0.5+8'
+          java-version: '21.0.5+11.0.LTS'
           architecture: x64
           distribution: 'temurin'
 
