Editor: Use evaluation-context when adapting selection

--- a/game.project
+++ b/game.project
@@ -18,6 +18,7 @@ dependencies#0 = https://github.com/andsve/dirtylarry/archive/master.zip
 
 [library]
 include_dirs = texturepacker
+defold_min_version = 1.12.1
 
 [graphics]
 max_draw_calls = 1024
